--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "fs": "0.0.1-security",
     "gridfs": "^1.0.0",
     "helmet": "^3.21.2",
+    "ipfs-http-client": "^42.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.11",
